added Button icons there drop downs , and some minor changes

--- a/FlipKart/src/index.html
+++ b/FlipKart/src/index.html
@@ -7,35 +7,117 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="nav">
+
+    <nav>
         <div class="logo">
             <img src="/img/logo.svg" alt="logo">
         </div>
-        <div class="search-bar">
-            <textarea name="search" id="search">Search for Products , Branch and more</textarea>
+        <div class="nav-buttons" style="background-color: white;">
+            <div class="button">
+                <img src="/img/icons/login.svg" alt=""> 
+                
+                <div class="dropdown">
+                    <div class="dropbtn">Login</div>
+                    <div class="dropdown-content">
+                        <a href="#" style="text-decoration: none;
+                            background-color: white;
+                            color: black;">New Customer ?   
+                        <div class="txt">Sign Up</div></a>
+                        <hr>
+                        <a href="#"><img src="/img/icons/profile.svg" alt=""> My Profile</a>
+                        <a href="#"><img src="/img/icons/fkplus.svg" alt=""> Flipkart Plus Zone</a>
+                        <a href="#"><img src="/img/icons/orders.svg" alt=""> Orders</a>
+                        <a href="#"><img src="/img/icons/download.svg" alt=""> Wishlist</a>
+                        <a href="#"><img src="/img/icons/rewards.svg" alt=""> Rewards</a>
+                        <a href="#"><img src="/img/icons/giftCards.svg" alt=""> Gift Cards</a>
+                    </div>
+                </div>
+            </div>
+            <div class="button">
+                <img src="/img/icons/cart.svg" alt=""> Cart
+            </div>
+            <div class="button">
+                <img src="/img/icons/store.svg" alt=""> Became A Seller
+            </div>
+            <div class="button">
+                <img src="/img/icons/header_3verticalDots-ea7819.svg" alt="">
+            </div>
         </div>
-        <div class="nav-buttons">
-            <a href="#">
-                <button>
-                    <img src="/img/icons/login.svg" alt="login">    Login
-                </button>
-            </a>
-            <a href="#">
-                <button>
-                    <img src="/img/icons/cart.svg" alt="cart">    Cart
-                </button>
-            </a>
-            <a href="#">
-                <button style="min-width: 13rem ;">
-                    <img src="/img/icons/store.svg" alt="store">    Beacome a Seller
-                </button>
-            </a>
-            <a href="#">
-                <button style="width: fit-content;">
-                    <img src="/img/icons/header_3verticalDots-ea7819.svg" alt="dots">
-                </button>
-            </a>
-        </div>
+    </nav>
+
+    <center>
+    
+        <div class="button-icons">
+        <div class="icon"><img src="/img/icons/minutesicon.webp" alt=""></div>
+        <div class="icon"><img src="/img/icons/mobile.webp" alt=""></div>
+            <div class="icon"><div class="dropdown">
+                <div class="dropbtn"><img src="/img/icons/faishon.webp" alt=""></div>
+                      <div class="dropdown-content">
+                        <a href="#">Men's Top Wear</a>
+                        <a href="#">Men's Bottom Wear</a>
+                        <a href="#">Men's Ethinic Wear</a>
+                        <a href="#">Women's Top Wear</a>
+                        <a href="#">Women's Bottom Wear</a>
+                        <a href="#">Women's Ethinic Wear</a>
+                        <a href="#">Men's Foot wear</a>
+                        <a href="#">Women's Foot wear</a>
+                        <a href="#">Men's Accessories</a>
+                        <a href="#">Women's Accessories</a>
+                      </div>
+                </div>
+            </div>
+        <div class="icon"><div class="dropdown">
+                <div class="dropbtn"><img src="/img/icons/electronics.webp" alt=""></div>
+                      <div class="dropdown-content">
+                        <a href="#">Electronic's GST store</a>
+                        <a href="#">Camera & Accessories</a>
+                        <a href="#">Audio</a>
+                        <a href="#">Computer</a>
+                        <a href="#">Gaming</a>
+                        <a href="#">Healthcare and Personal</a>
+                        <a href="#">Laptop</a>
+                        <a href="#">Power Bank</a>
+                        <a href="#">Tablet</a>
+                        <a href="#">Headsets</a>
+                      </div>
+                </div>
+            </div>
+        <div class="icon"><div class="dropdown">
+                <div class="dropbtn"><img src="/img/icons/furniture.webp" alt=""></div>
+                      <div class="dropdown-content">
+                        <a href="#">Furniture</a>
+                        <a href="#">Kitchen</a>
+                        <a href="#">Living Room</a>
+                        <a href="#">Bedroom</a>
+                        <a href="#">Gaming Area</a>
+                        <a href="#">Space Spacing Furniture</a>
+                        <a href="#">Home Decor</a>
+                        <a href="#">Tools & Utility</a>
+                        <a href="#">Work Space Area</a>
+                        <a href="#">Kid's Furniture</a>
+                      </div>
+                </div>
+            </div>
+        <div class="icon"><img src="/img/icons/tv.webp" alt=""></div>
+        <div class="icon"><img src="/img/icons/img8.webp" alt=""></div>
+        <div class="icon"><div class="dropdown">
+                <div class="dropbtn"><img src="/img/icons/beauty.webp" alt=""></div>
+                      <div class="dropdown-content">
+                        <a href="#">Beauty & Personal Care</a>
+                        <a href="#">Men's Grooming</a>
+                        <a href="#">Food & Drinks</a>
+                        <a href="#">Nutrition & Health Care</a>
+                        <a href="#">Baby Care</a>
+                        <a href="#">Toy's & Kid's Product</a>
+                        <a href="#">Sports & Fitness</a>
+                        <a href="#">Books</a>
+                        <a href="#">Music</a>
+                        <a href="#">Stationary</a>
+                      </div>
+                </div>
+            </div>
     </div>
+
+    </center>
 </body>
 </html>
