--- a/FlipKart/src/index.html
+++ b/FlipKart/src/index.html
@@ -47,10 +47,11 @@
 
     <center>
     
-        <div class="button-icons">
+    <div class="button-icons">
         <div class="icon"><img src="/img/icons/minutesicon.webp" alt=""></div>
         <div class="icon"><img src="/img/icons/mobile.webp" alt=""></div>
-            <div class="icon"><div class="dropdown">
+            <div class="icon">
+                <div class="dropdown">
                 <div class="dropbtn"><img src="/img/icons/faishon.webp" alt=""></div>
                       <div class="dropdown-content">
                         <a href="#">Men's Top Wear</a>
